--- a/episode-01/backend/Dockerfile
+++ b/episode-01/backend/Dockerfile
@@ -1,20 +1,20 @@
-# Use the official Node.js image as the base image
-FROM node:14
+# Use a Node.js image as base
+FROM node:latest
 
 # Set the working directory inside the container
-WORKDIR /app
+WORKDIR /usr/src/app
 
-# Copy package.json and package-lock.json (if available)
+# Copy package.json and package-lock.json to the container
 COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application code
+# Copy the rest of your application
 COPY . .
 
-# Expose the port the application runs on
+# Expose the port your server runs on
 EXPOSE 3000
 
-# Start the application
+# Define the command to start your server
 CMD ["npm", "start"]
