--- a/episode-02/Deployment.yaml
+++ b/episode-02/Deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: episode01-deployment
+  name: episode02-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: episode01
+      app: episode02
   template:
     metadata:
       labels:
-        app: episode01
+        app: episode02
     spec:
       containers:
-      - name: episode01-container
+      - name: episode02-container
         image: taimooranwar/episode-02:latest
         ports:
         - containerPort: 3001
         - containerPort: 8001
       nodeSelector:
-        kubernetes.io/hostname: assignment3-m02
+        kubernetes.io/hostname: assignment03
