--- a/episode-03/Deployment.yaml
+++ b/episode-03/Deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: episode01-deployment
+  name: episode03-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: episode01
+      app: episode03
   template:
     metadata:
       labels:
-        app: episode01
+        app: episode03
     spec:
       containers:
-      - name: episode01-container
+      - name: episode03-container
         image: taimooranwar/episode-03:latest
         ports:
         - containerPort: 3002
         - containerPort: 8002
       nodeSelector:
-        kubernetes.io/hostname: assignment3-m02
+        kubernetes.io/hostname: minikube-m02
